<resources>
    <string name="app_name">Dr. Ehab Kabil Clinic</string>
    <string name="loading">جاري التحميل ...</string>
    <string name="continue_as_doctor">اكمل كطبيب</string>
    <string name="continue_as_patient">اكمل كمريض</string>
    <string name="noUserTypeSelected">لم يتم اختيار نوع المستخدم</string>
    <string name="required">الزامي</string>
    <string name="wrong_email">خطأ في البريد الالكتروني</string>
    <string name="have_account">هل لديك حساب مسبق ؟</string>
    <string name="register">"انشأ حساب الان "</string>
    <string name="forget_password">هل نسيت كلمة المرور ؟</string>
    <string name="remember_me">تذكرني</string>
    <string name="setting">الاعدادات</string>
    <string name="intro">عيادة الدكتور ايهاب قابيل</string>
    <string name="cancel">الغاء</string>
    <string name="confirm">تأكيد</string>
    <string name="selected_date">التاريخ المختار: ---</string>
    <string name="pick_a_date">اختر ميعاد</string>
    <string name="your_appointments">مواعيدك المحجوزه</string>
    <string name="welcome_back">مرحباا !!</string>
    <string name="to_continue_login_now">سجل دخولك الان !!</string>
    <string name="e_mail">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="login">تسجيل دخول</string>
    <string name="get_started">ابدأ</string>
    <string name="skip">تخطي</string>
    <string name="dr_ehab_kabil">دكتور/ ايهاب قابيل</string>
    <string name="my_profile">ملفي الشخصي</string>
    <string name="logout">تسجيل خروج</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="about_us">عن العيادة</string>
    <string name="language">اللغه</string>
    <string name="cases">الحالات</string>
    <string name="case_details">تفاصيل الحالة</string>
    <string name="patient_name">"اسم المريض: "</string>
    <string name="age">عمر المريض:</string>
    <string name="phone_number">رقم التيليفون:</string>
    <string name="email">البريد الالكتروني:</string>
    <string name="address">العنوان:</string>
    <string name="are_you_sure_you_want_to_logout">تأكيد تسجيل الخروج ؟</string>
    <string name="ok">نعم</string>
    <string name="all_bookings">كل الحجوزات</string>
    <string name="select_a_date_to_show_the_available_slots">اختر تاريخ لعرض المواعيد المتاحة</string>
    <string name="bookings_of_today">حجوزات اليوم</string>
    <string name="all_cases">بيانات الحالات</string>
    <string name="book_now">احجز الان ؟</string>
    <string name="price">200 جنيهاا</string>
    <string name="hi_dr_ehab_kabil">مرحباا دكتور ايهاب</string>
    <string name="common_questions">اسئلة شائعة ؟</string>
    <string name="new_user">مستخدم جديد</string>
    <string name="pick_a_slot">اختار موعد</string>
    <string name="next">التالي</string>
    <string name="warning">تحذير !!</string>
    <string name="clinic_is_not_working_on">عيادة الدكتور ايهاب قابيل لا تعمل في هذا اليوم !!</string>
    <string name="manage_available_slots">تعديل المواعيد المتاحة</string>
    <string name="for_you">لكي **</string>
    <string name="feedbacks">أراء المرضي</string>
    <string name="all_feedbacks">كل اراء المرضي</string>
    <string name="post">نشر</string>
    <string name="enter_the_answer">... ادخل الاجابة</string>
    <string name="answer">الاجابه</string>
    <string name="enter_the_question">... ادخل السؤال</string>
    <string name="question">السؤال</string>
    <string name="all_questions">كل الاسئلة الشائعه</string>
    <string name="write_your_feedback_here">اكتب تعليقك هنا</string>
    <string name="rating">تقييم</string>
    <string name="give_your_visit_a_rate">تقييمك يساعدنا غلي تحسين الخدمة</string>
    <string name="stars_intro">كم نجمة تعطي لزياراتك للعيادة ؟</string>
    <string name="about_the_doctor">عن الدكتور</string>
    <string name="your_bookings">مواعيدك</string>
    <string name="hi">‘اهلا</string>
    <string name="about_the_clinic">عن العيادة</string>
    <string name="book_an_appointment_now">احجز موعد الان !</string>
    <string name="onboarding_intro">استشاري ورئيس قسم التوليد وأمراض النساء والعقم بمستشفيات القوات المسلحة خبرة اكثر من 25 عاما في مجال النساء و التوليد و تأخر الانجاب</string>
    <string name="delivery_essensials">شنطة المستشفي</string>
    <string name="baby_names">اقتراحات اسماء لطفلك</string>
    <string name="baby_kicks">ركلات الطفل</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="hospital_bag">شنطة المستشفي</string>
    <string name="your_essencials">مستلزماتك</string>
    <string name="baby_essencials">مستلزمات طفلك</string>
    <string name="booking_confirmed_dialog_message">تم تأكيد حجزك في الساعة %s! ✅</string>
    <string name="booking_dialog_additional_info"> يجب التواجد في العيادة قبل الميعاد بـ 30 دقيقة على الأقل. والا سيتم الغاء الحجز او التأجيل الي اخر العيادة و يرجي العلم بأن ممنوع دخول الاطفال غرفة الكشف. ⚠️</string>
    <string name="close_date">اجازة</string>
    <string name="close_slot">حجز لمريض</string>
    <string name="what_is_the_edit">ما هو التعديل ؟</string>
    <string name="do_edit_here">قم بالتعديل هنا !!</string>
    <string name="edit_ques">عدل السؤال</string>
    <string name="edit_ans">عدل الاجابة</string>
    <string name="note">ملحوظه</string>
    <string name="write_notes">اكتب ملاحظاتك هنا !!</string>
    <string name="notes_headings">ملاحظات</string>
    <string name="year">السنة</string>
    <string name="day">اليوم</string>
    <string name="month">الشهر</string>
    <string name="for_you_mom">لأجلك يا ماما</string>
    <string name="what_to_name_your_baby">ماذا تسمي طفلك ؟؟</string>
    <string name="evening_slots">فترات مسائيه</string>
    <string name="morning_slots">فترات صباحية</string>
    <string name="girls">بنات</string>
    <string name="boys">اولاد</string>
</resources>