<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/topLine"
        android:layout_width="wrap_content"
        android:layout_height="2.5dp"
        android:background="@drawable/top_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/year"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLine"
        android:background="@drawable/text_box"
        android:hint="@string/year"
        android:layout_marginTop="14dp"
        android:textColorHint="@color/grey"
        android:gravity="center" />

    <EditText
        android:id="@+id/day"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLine"
        android:background="@drawable/text_box"
        android:hint="@string/day"
        android:layout_marginTop="14dp"
        android:textColorHint="@color/grey"
        android:gravity="center" />

    <EditText
        android:id="@+id/month"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/year"
        app:layout_constraintEnd_toStartOf="@id/day"
        app:layout_constraintTop_toBottomOf="@id/topLine"
        android:background="@drawable/text_box"
        android:hint="@string/month"
        android:layout_marginTop="14dp"
        android:textColorHint="@color/grey"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/day"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/default_blue"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        android:text="@string/confirm"/>

</androidx.constraintlayout.widget.ConstraintLayout>