<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_confirmation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/booking_confirmed_dialog_message" />

    <TextView
        android:id="@+id/tv_additional_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_confirmation_message"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/grey"
        android:gravity="center"
        android:text="@string/booking_dialog_additional_info" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_additional_info"
        android:layout_marginHorizontal="12dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/default_blue"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        android:text="@string/ok"/>

</androidx.constraintlayout.widget.ConstraintLayout>