<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"
        />

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.09"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintTop_toBottomOf="@+id/horizontalUp"
        />

    <TextView
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_questions"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/arrowBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/arrowBack"
        app:layout_constraintTop_toTopOf="@id/arrowBack" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/thin_line"
        app:layout_constraintTop_toBottomOf="@id/newUser"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"/>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:textColor="@color/default_pink"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edit_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box"
        app:layout_constraintTop_toBottomOf="@id/question"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_the_question"
        android:textColorHint="@color/grey"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/question"
        app:layout_constraintTop_toBottomOf="@id/edit_question"
        android:layout_marginTop="20dp"
        android:text="@string/answer"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:textColor="@color/default_pink"/>

    <EditText
        android:id="@+id/edit_answer"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/text_box"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_the_answer"
        android:textColorHint="@color/grey"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/answer"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/post"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="40dp"/>

    <ProgressBar
        android:id="@+id/in_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:indeterminateTint="@color/default_pink"/>

</androidx.constraintlayout.widget.ConstraintLayout>