<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/topLine"
        android:layout_width="wrap_content"
        android:layout_height="2.5dp"
        android:background="@drawable/top_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_black"
        android:text="@string/warning"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLine"/>

    <TextView
        android:id="@+id/logout_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/clinic_is_not_working_on"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/logout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logout_des"
        android:layout_marginHorizontal="12dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/default_blue"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        android:text="@string/ok"/>

</androidx.constraintlayout.widget.ConstraintLayout>