<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pink_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="102dp"
        android:layout_height="146dp"
        android:importantForAccessibility="no"
        android:src="@drawable/clinic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/default_pink"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_continue_login_now"
        android:textSize="12sp"
        android:textColor="#7D7D7D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/text_box"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:paddingHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <TextView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_email_24"
        app:layout_constraintStart_toStartOf="@id/editText"
        app:layout_constraintTop_toTopOf="@id/editText"
        app:layout_constraintBottom_toBottomOf="@id/editText"
        android:layout_marginStart="10dp"
        />
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="17dp"
        android:background="@drawable/text_box"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/show_pass"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:background="@drawable/show_password"
        app:layout_constraintEnd_toEndOf="@id/editText2"
        app:layout_constraintTop_toTopOf="@id/editText2"
        app:layout_constraintBottom_toBottomOf="@id/editText2"
        android:layout_marginEnd="10dp"
        />
    <TextView
        android:id="@+id/lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_lock_24"
        app:layout_constraintStart_toStartOf="@id/editText2"
        app:layout_constraintTop_toTopOf="@id/editText2"
        app:layout_constraintBottom_toBottomOf="@id/editText2"
        android:layout_marginStart="10dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="60dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textSize="20sp"
        app:backgroundTint="@color/default_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remember_me"
        app:layout_constraintWidth_percent="0.9"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cursor"
        app:layout_constraintStart_toEndOf="@id/lock"
        app:layout_constraintTop_toTopOf="@id/editText2"
        app:layout_constraintBottom_toBottomOf="@id/editText2"
        android:layout_marginStart="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cursor"
        app:layout_constraintStart_toEndOf="@id/lock"
        app:layout_constraintTop_toTopOf="@id/editText"
        app:layout_constraintBottom_toBottomOf="@id/editText"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        android:layout_marginTop="10dp"
        android:text="@string/have_account"/>
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/have_account"
        app:layout_constraintEnd_toEndOf="@id/have_account"
        app:layout_constraintTop_toBottomOf="@id/have_account"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/default_pink"
        android:text="@string/register"/>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="@id/editText2"
        android:outlineAmbientShadowColor="@color/default_pink" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/remember_me"
        app:layout_constraintTop_toTopOf="@id/remember_me"
        app:layout_constraintBottom_toBottomOf="@id/remember_me"
        android:text="@string/remember_me"
        android:layout_marginStart="5dp"
        android:textColor="@color/default_pink"/>
</androidx.constraintlayout.widget.ConstraintLayout>