<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="15dp"
    android:layout_marginBottom="10dp"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/year"
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/text_box"
            android:hint="@string/year"
            android:textColorHint="@color/grey"
            android:gravity="center" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/year"
            app:layout_constraintBottom_toBottomOf="@id/year"
            android:background="@drawable/delete"/>

        <EditText
            android:id="@+id/day"
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toStartOf="@id/delete"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_box"
            android:hint="@string/day"
            android:textColorHint="@color/grey"
            android:gravity="center" />

        <EditText
            android:id="@+id/month"
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@id/year"
            app:layout_constraintEnd_toStartOf="@id/day"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/text_box"
            android:hint="@string/month"
            android:textColorHint="@color/grey"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>