<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/topLine"
        android:layout_width="wrap_content"
        android:layout_height="2.5dp"
        android:background="@drawable/top_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_black"
        android:text="@string/what_is_the_edit"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/topLine"/>

    <TextView
        android:id="@+id/logout_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/do_edit_here"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/rating" />

    <EditText
        android:id="@+id/edit_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/logout_des"
        android:background="@drawable/text_box"
        android:hint="اسم الخدمة"
        android:textColorHint="@color/grey"
        android:paddingHorizontal="10dp"
        android:textColor="@color/default_blue"
        android:layout_marginTop="12dp"/>
    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edit_service"
        android:background="@drawable/text_box"
        android:hint="السعر"
        android:textColorHint="@color/grey"
        android:paddingHorizontal="10dp"
        android:textColor="@color/default_blue"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_price"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/default_blue"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        android:text="@string/post"/>


</androidx.constraintlayout.widget.ConstraintLayout>